# mailscout

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
mailscout/: __init__.py  scout.py
tests/: test_scout.py
